--- a/about.html
+++ b/about.html
@@ -550,9 +550,7 @@
 
             <div class="homeServices-title">
                 <h2>Our <span>Services</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi nisi praesentium hic nihil quas
-                    excepturi eos vel modi fugit atque placeat accusamus inventore laborum delectus ex a non, tempora
-                    voluptatum!</p>
+                <p>Iq Techway Provides top notch Web and Mobile App Solution.</p>
             </div>
             <div class="homeSrvices-content">
                 <div class="homeServices-boxs">
