--- a/android-app.html
+++ b/android-app.html
@@ -473,8 +473,7 @@
 
     <div class="research-title mb-5">
         <h2>Android App <span>development Company</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>Welcome to IQ Techway, where innovation meets functionality in the dynamic world of Android app development. </p>
     </div>
 
 
