--- a/brand-consulting.html
+++ b/brand-consulting.html
@@ -470,8 +470,7 @@
 
     <div class="research-title mb-5">
         <h2>BRAND <span>CONSULTING</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At BrandMuse Consultancy, we specialize in shaping compelling narratives that breathe life into brands. </p>
     </div>
 
 
