--- a/brand-startegies.html
+++ b/brand-startegies.html
@@ -471,8 +471,7 @@
 
     <div class="research-title mb-5">
         <h2>Brand Strategies <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>Welcome to IQ Techway, where we specialize in crafting innovative and impactful brand strategies that drive growth and foster lasting connections with your audience. </p>
     </div>
 
     <!-- About Section Start -->
