--- a/career.html
+++ b/career.html
@@ -627,7 +627,7 @@
 
             <div class="popup-form-container">
                 <h2>Apply the <span>Form</span> </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <p>Are you seeking a dynamic work environment that fosters innovation and encourages growth? </p>
                 <form action="apply()" method="POST">
                     <input type="text" id="name" placeholder="Enter Your Name" required>
                     <input type="email" id="email" placeholder="Enter Your Email" required>
