--- a/cloud-app.html
+++ b/cloud-app.html
@@ -472,8 +472,7 @@
 
     <div class="research-title mb-5">
         <h2>Cloud App <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p> Our suite of cloud app services is designed to meet these evolving needs, offering seamless integration, robust security, and unparalleled reliability.</p>
     </div>
 
 
