--- a/contact.html
+++ b/contact.html
@@ -527,8 +527,7 @@
 
             <div class="consultant-form">
                 <h2>Talk to <span>Consultant</span> </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae asperiores deserunt odio accusantium
-                    fugit, magnam blanditiis rem nemo voluptates iure velit nihil.</p>
+                <p>Get Complete Business Analysis Report From Our Experts Now!</p>
                 <form action="contact()" method="POST">
 
                     <div class="consultant-boxs">
