--- a/crm-development.html
+++ b/crm-development.html
@@ -461,8 +461,7 @@
 
     <div class="research-title mb-5">
         <h2>CRM Software Development <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p> As a leading innovator in CRM software development, we are dedicated to empowering enterprises of all sizes with tailored, intuitive, and highly efficient CRM solutions.</p>
     </div>
 
     <section class="our-solutions-section ">
