--- a/cross-mobile-development.html
+++ b/cross-mobile-development.html
@@ -476,8 +476,7 @@
 
     <div class="research-title mb-5">
         <h2><span>Cross-platform</span> mobile development </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>IQ Techway is at the forefront of revolutionizing cross-platform development, offering innovative solutions that transcend traditional boundaries. </p>
     </div>
 
 
