--- a/frontend.html
+++ b/frontend.html
@@ -463,8 +463,7 @@
 
     <div class="research-title mb-5">
         <h2>Frontend <span>Development</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
     </div>
 
 
@@ -698,8 +697,7 @@
         <div class="industries-container-1 container">
             <div class="industries-title">
                 <h2>Website design services <span> we offer</span></h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, veritatis totam unde eaque non ab!
-                </p>
+                <p>At IQ Techway, we redefine digital interactions through cutting-edge frontend development solutions.</p>
                 <div class="industries-title-overlay"></div>
             </div>
             <div class="industries-box-container-1">
