--- a/hire-laravel-developer.html
+++ b/hire-laravel-developer.html
@@ -457,8 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Laravel <span>Developers</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we are pioneers in leveraging innovative technologies to deliver cutting-edge solutions for our global clientele.</p>
     </div>
 
 
