--- a/hire-magento-developer.html
+++ b/hire-magento-developer.html
@@ -455,8 +455,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Dedicated <span>Magento Developers</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we are a dynamic team of highly skilled and innovative Magento developers dedicated to revolutionizing your online presence. </p>
     </div>
 
 
