--- a/hire-seo-expert.html
+++ b/hire-seo-expert.html
@@ -459,8 +459,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Best <span>SEO Experts</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we're more than just a digital marketing agency – we're your trusted partners in unlocking the full potential of your online presence.</p>
     </div>
 
 
