--- a/hire-wordpress-developer.html
+++ b/hire-wordpress-developer.html
@@ -458,8 +458,7 @@
         <h2>Hire Dedicated
             <span> WordPress Developers</span>
         </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we pride ourselves on being a trailblazing force in the realm of WordPress development. With a dedicated team of seasoned developers, designers, and digital strategists, we offer unparalleled expertise and innovative solutions tailored to meet your unique needs</p>
     </div>
 
 
