--- a/ios-app.html
+++ b/ios-app.html
@@ -460,8 +460,7 @@
 
     <div class="research-title mb-5">
         <h2>iOS App <span>development service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we are the architects of cutting-edge iOS applications that redefine user experiences. As a pioneering app development company, we fuse creativity with technology to deliver bespoke solutions tailored to our clients' needs.</p>
     </div>
 
 
