--- a/java.html
+++ b/java.html
@@ -456,8 +456,7 @@
 
     <div class="research-title mb-5">
         <h2>Java Website Development <span>Services</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we're dedicated to transforming your digital aspirations into innovative, user-centric, and cutting-edge Java-powered websites.</p>
     </div>
 
 
