--- a/join-team.html
+++ b/join-team.html
@@ -458,8 +458,7 @@
         <div class="join-team-container container">
             <div class="join-team-title mb-5 text-center">
                 <h2>Current <span>Openings</span> </h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui esse saepe in temporibus repellat dolor
-                    doloremque quo illo ratione sed.</p>
+                <p>Are you seeking a dynamic work environment that fosters innovation and encourages growth? Look no further than IQ Techway! As a leading tech company dedicated to pushing boundaries and redefining possibilities, we're on the lookout for talented individuals to join our team.</p>
             </div>
             <div class="join-team-pills">
                 <ul class="nav nav-pills d-flex justify-content-center gap-3 flex-wrap mb-3" id="pills-tab"
@@ -622,7 +621,7 @@
 
             <div class="popup-form-container">
                 <h2>Apply the <span>Form</span> </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                <p>Are you seeking a dynamic work environment that fosters innovation and encourages growth?</p>
                 <form action="apply()" method="POST">
                     <input type="text" id="name" placeholder="Enter Your Name" required>
                     <input type="email" id="email" placeholder="Enter Your Email" required>
