--- a/logo-and-brand-indentity.html
+++ b/logo-and-brand-indentity.html
@@ -453,8 +453,7 @@
 
     <div class="research-title mb-5">
         <h2> LOGO & BRANDING <span>Identity Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we pioneer cutting-edge solutions to elevate intelligence through innovative technology. Our identity rests upon a commitment to pushing the boundaries of possibility, driving transformation, and enabling businesses to thrive in an ever-evolving digital landscape.</p>
     </div>
 
 
