--- a/nft-marketplace.html
+++ b/nft-marketplace.html
@@ -452,8 +452,7 @@
 
     <div class="research-title mb-5">
         <h2>NFT Marketplace <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>Welcome to IQ Techway, where innovation meets the future of digital assets. As a pioneering force in the realm of cutting-edge technology, we proudly present our revolutionary NFT (Non-Fungible Token) Marketplace.</p>
     </div>
 
     <!-- What is NFT Start -->
