--- a/nodejs.html
+++ b/nodejs.html
@@ -437,11 +437,11 @@
 
         <div class="banner-section">
             <span class="since">Since 2019</span>
-            <h1>Node.js Development <span> Service</span></h1>
+            <h1>Node  js Development <span> Service</span></h1>
             <p>High Quality Web & Mobile Application Design & Development Solution, that will help you to achieve new
                 heights in your business.
             </p>
-            <span class="del"><a href="index.html">Home </a> > Node.js Development Services</span>
+            <span class="del"><a href="index.html">Home </a> > Node js Development Services</span>
 
         </div>
         <!-- banner section End -->
@@ -453,9 +453,8 @@
     <!-- Header End  -->
 
     <div class="research-title mb-5">
-        <h2>Node.js Development <span>Services</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <h2>Node js Development <span>Services</span> </h2>
+        <p>IQ Techway is a pioneering force in Node.js development, specializing in crafting cutting-edge solutions that redefine technological possibilities. </p>
     </div>
 
 
