--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -452,8 +452,7 @@
 
     <div class="research-title mb-5">
         <h2>Pay Per Click <span> Company</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we understand the dynamic landscape of digital advertising. With a team of seasoned experts well-versed in the intricacies of PPC, we're dedicated to propelling your business forward by leveraging the power of targeted advertising campaigns.</p>
     </div>
 
     <section class="our-solutions-section ">
