--- a/php.html
+++ b/php.html
@@ -461,8 +461,7 @@
 
     <div class="research-title mb-5">
         <h2>PHP <span>Development</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
     </div>
 
 
@@ -732,8 +731,7 @@
 
     <div class="research-title mb-5">
         <h2>PHP Backend <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we pride ourselves on being a trailblazing PHP development company that stands at the forefront of technological evolution. </p>
     </div>
 
 
