--- a/pwa.html
+++ b/pwa.html
@@ -456,8 +456,7 @@
 
     <div class="research-title mb-5">
         <h2><span>Progressive Web</span> App Service </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we redefine digital experiences through cutting-edge technology, and our specialty lies in crafting Progressive Web Apps (PWAs) that transform the way users engage with your brand.</p>
     </div>
 
 
