--- a/react-native.html
+++ b/react-native.html
@@ -455,8 +455,7 @@
 
     <div class="research-title mb-5">
         <h2><span>React Native  </span> solution</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we are at the forefront of modern mobile development, harnessing the power of React Native to transform the way businesses craft their digital presence.</p>
     </div>
 
     
