--- a/search-engine-marketing.html
+++ b/search-engine-marketing.html
@@ -452,8 +452,7 @@
 
     <div class="research-title mb-5">
         <h2>SEO Services <span>development Company</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we specialize in elevating your online presence through cutting-edge Search Engine Optimization (SEO) strategies tailored to suit your unique business needs. </p>
     </div>
 
     <section class="our-solutions-section ">
