--- a/shopify.html
+++ b/shopify.html
@@ -457,8 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>Shopify <span>Development</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we're dedicated to transforming your eCommerce vision into reality. As a leading Shopify development company, we understand the dynamic landscape of online businesses and excel in crafting tailored solutions to elevate your brand.</p>
     </div>
 
     <!-- Home Services start -->
