--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -451,8 +451,7 @@
 
     <div class="research-title mb-5">
         <h2>Social Media Marketing  <span>development Company</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>Welcome to IQ Techway, where technology meets creativity and innovation finds its platform. As a pioneering force in the digital sphere, we specialize in leveraging the power of social media to propel businesses to new heights.</p>
     </div>
 
     
