--- a/typeScript.html
+++ b/typeScript.html
@@ -451,8 +451,7 @@
 
     <div class="research-title mb-5">
         <h2>Typescript-get your digital  <span>solution</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we pride ourselves on being a dynamic force in the realm of digital solutions. With a relentless commitment to innovation and excellence, we stand at the forefront of technological advancement, offering cutting-edge solutions tailored to meet the diverse needs of modern businesses.</p>
     </div>
 
     
