--- a/web-app.html
+++ b/web-app.html
@@ -846,8 +846,7 @@
 
     <div class="research-title mb-5">
         <h2>Enterprise Web App <span>Development</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we're dedicated to revolutionizing the digital landscape for enterprises worldwide. With a relentless commitment to excellence, we specialize in crafting bespoke web applications that drive efficiency, productivity, and success.</p>
     </div>
 
     <!-- rESERCH SECTION START -->
