--- a/wordpress.html
+++ b/wordpress.html
@@ -454,8 +454,7 @@
 
     <div class="research-title mb-5">
         <h2>Wordpress <span>Development</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we specialize in crafting tailored WordPress solutions that empower businesses to thrive in the digital landscape. With a team of seasoned developers and designers, we harness the power of WordPress to create stunning, functional, and user-centric websites that resonate with your brand identity.</p>
     </div>
 
 
