--- a/ai-machine-learning.html
+++ b/ai-machine-learning.html
@@ -471,8 +471,7 @@
 
     <div class="research-title mb-5">
         <h2>Artificial Intelligence (AI) and Machine Learning <span>Services</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>In the realm of technology, Artificial Intelligence (AI) stands as a transformative force, reshaping industries, societies, and human existence itself.</p>
     </div>
 
 
