--- a/digital-design.html
+++ b/digital-design.html
@@ -473,8 +473,7 @@
 
     <div class="research-title mb-5">
         <h2>Digital Design <span>Services</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p> As a leading provider of digital design services, we combine innovation, creativity, and technical expertise to amplify your brand's online impact.</p>
     </div>
 
     <section class="our-solutions-section ">
