--- a/dotNet.html
+++ b/dotNet.html
@@ -457,8 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>.Net development <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>IQ Techway is a leading-edge .Net development company dedicated to crafting cutting-edge software solutions that empower businesses to thrive in the digital landscape.</p>
     </div>
 
     
