--- a/erp-software.html
+++ b/erp-software.html
@@ -459,8 +459,7 @@
 
     <div class="research-title mb-5">
         <h2>Custom ERP Software <span>Development</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we specialize in crafting tailor-made ERP software that revolutionizes the way businesses operate. </p>
     </div>
 
     <section class="our-solutions-section ">
