--- a/flutter-app.html
+++ b/flutter-app.html
@@ -455,8 +455,7 @@
 
     <div class="research-title mb-5">
         <h2><span>Flutter app</span> development services</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we embody innovation and excellence in crafting cutting-edge mobile applications using Flutter.</p>
     </div>
 
 
