--- a/hire-flutter-developer.html
+++ b/hire-flutter-developer.html
@@ -457,8 +457,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Flutter <span>Developers</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we're committed to delivering top-tier Flutter development services that transcend the ordinary.</p>
     </div>
 
 
