--- a/hire-logo-designers.html
+++ b/hire-logo-designers.html
@@ -456,8 +456,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire Best <span>Logo Designer</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>As we continue to expand our presence in the industry, we are searching for a skilled logo designer to join our team and contribute to our brand's visual identity.</p>
     </div>
 
 
