--- a/hire-php-developer.html
+++ b/hire-php-developer.html
@@ -459,8 +459,7 @@
 
     <div class="research-title mb-5">
         <h2>Hire <span> PHP Developers</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, our team of seasoned PHP developers possesses a blend of expertise and creativity, enabling us to create bespoke applications, robust websites, and intricate systems tailored to your unique needs.</p>
     </div>
 
 
