--- a/hybrid-app.html
+++ b/hybrid-app.html
@@ -455,8 +455,7 @@
 
     <div class="research-title mb-5">
         <h2><span>Hybrid App </span> Development </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we redefine the landscape of digital experiences through innovative and dynamic hybrid applications. </p>
     </div>
 
 
