--- a/magento.html
+++ b/magento.html
@@ -456,8 +456,7 @@
 
     <div class="research-title mb-5">
         <h2>Magento <span>Development</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>IQ Techway is a leading provider of comprehensive Magento development solutions tailored to meet the diverse needs of businesses worldwide. </p>
     </div>
 
     <!-- Magento Content Section Start -->
