--- a/product-development.html
+++ b/product-development.html
@@ -456,8 +456,7 @@
 
     <div class="research-title mb-5">
         <h2>Product Development <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we transcend boundaries and redefine innovation. With a relentless pursuit of excellence, we spearhead the future of technology. </p>
     </div>
 
 
