--- a/seo-copy-writing.html
+++ b/seo-copy-writing.html
@@ -450,8 +450,7 @@
 
     <div class="research-title mb-5">
         <h2>SEO Copy Writing <span> Management</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we specialize in propelling businesses to the forefront of online success through our cutting-edge SEO copywriting management solutions. </p>
     </div>
 
     <section class="our-solutions-section ">
