--- a/seo.html
+++ b/seo.html
@@ -451,8 +451,7 @@
 
     <div class="research-title mb-5">
         <h2>SEO Services <span>development Company</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we are dedicated to propelling your business to the forefront of digital success through our cutting-edge SEO services. </p>
     </div>
 
     <!-- Talk to Consultant Start -->
