--- a/software-solutions.html
+++ b/software-solutions.html
@@ -837,8 +837,7 @@
         <div class="hire-choosing-container container">
             <div class="hire-choosing-title">
                 <h2>Why Choose Iq <span>Techway</span></h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ea sequi porro molestias facilis.
-                    Autem quae est cumque amet tempora cupiditate.</p>
+                <p>At IQ Techway, we believe in innovation that shapes the future. Established with a vision to empower businesses and individuals through cutting-edge technology, we are a pioneering force in the realm of digital solutions.</p>
             </div>
             <div class="hireChoose-box-container">
                 <div class="hireChoose-box">
