--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -455,8 +455,7 @@
 
     <div class="research-title mb-5">
         <h2>UX/UI Design <span>Service</span> </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio debitis error ipsam ab a non reprehenderit
-            maxime accusantium nulla nam!</p>
+        <p>At IQ Techway, we're dedicated to crafting intuitive, elegant, and user-centric experiences that redefine how individuals interact with technology. Our passion lies in merging creativity with cutting-edge technology to deliver exceptional UX/UI design solutions that captivate, engage, and inspire.</p>
     </div>
 
     
