--- a/index.html
+++ b/index.html
@@ -261,14 +261,19 @@
                                 Hire
                             </a>
 
-                           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item"  href="hire-flutter-developer.html">Hire Flutter Developer</a></li>
-                                <li><a class="dropdown-item" href="hire-laravel-developer.html">Hire Laravel Developer</a></li>
-                                <li><a class="dropdown-item"  href="hire-logo-designers.html">Hire Logo Designers</a></li>
-                                <li><a class="dropdown-item" href="hire-magento-developer.html">Hire Magento Developer</a></li>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href="hire-flutter-developer.html">Hire Flutter
+                                        Developer</a></li>
+                                <li><a class="dropdown-item" href="hire-laravel-developer.html">Hire Laravel
+                                        Developer</a></li>
+                                <li><a class="dropdown-item" href="hire-logo-designers.html">Hire Logo Designers</a>
+                                </li>
+                                <li><a class="dropdown-item" href="hire-magento-developer.html">Hire Magento
+                                        Developer</a></li>
                                 <li><a class="dropdown-item" href="hire-php-developer.html">Hire PHP Developer</a></li>
                                 <li><a class="dropdown-item" href="hire-seo-expert.html">Hire SEO Experts</a></li>
-                                <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress Developer</a></li>
+                                <li><a class="dropdown-item" href="hire-wordpress-developer.html">Hire Wordpress
+                                        Developer</a></li>
                             </ul>
                         </div>
                         <a href="career.html"><button class="load-btn6" id="fans" onmouseover="function6()"><i
@@ -1091,9 +1096,12 @@
         <div class="proficient-container container">
             <div class="proficient-title">
                 <h2>Industries <span>We Serve</span></h2>
-                <p>At IQ Techway, we take pride in providing cutting-edge software solutions tailored to meet the unique needs of various industries. Our expertise extends across diverse sectors, enabling us to deliver innovative and customized software services. We serve but are not limited to the following industries:</p>
+                <p>At IQ Techway, we take pride in providing cutting-edge software solutions tailored to meet the unique
+                    needs of various industries. Our expertise extends across diverse sectors, enabling us to deliver
+                    innovative and customized software services. We serve but are not limited to the following
+                    industries:</p>
             </div>
-            <div class="proficient-content"> 
+            <div class="proficient-content">
                 <div class="proficient-boxs">
                     <div class="proficient-box-icon">
                         <img src="assets/Images/we-serve/1.png" alt="We-Served">
@@ -1208,7 +1216,7 @@
             <img src="assets/Images/New/road map.png" alt="Journy-image">
         </div>
     </section>
-   
+
     <!-- Journy Section End -->
 
     <!-- Technologies Section Start -->
@@ -1442,7 +1450,10 @@
                 <div class="daily-sales-images">
                     <div class="industries-title-overlay"></div>
                     <h2>Our <span>Portfolio</span></h2>
-                    <p>Welcome to Iq Techway, where we showcase our diverse portfolio of groundbreaking software solutions that have transformed businesses across various industries. Our commitment to excellence and innovation drives us to create custom-tailored software that addresses unique challenges and exceeds expectations.</p>
+                    <p>Welcome to Iq Techway, where we showcase our diverse portfolio of groundbreaking software
+                        solutions that have transformed businesses across various industries. Our commitment to
+                        excellence and innovation drives us to create custom-tailored software that addresses unique
+                        challenges and exceeds expectations.</p>
                     <a href="case-studies.html" class="btn">
                         <span class="btn-1"></span>
                         <span class="btn-2">View More</span>
@@ -1525,7 +1536,7 @@
 
     <!-- FAQ End  -->
 
-    
+
 
     <!-- Testimonial Section STart -->
 
@@ -2032,6 +2043,60 @@
     </footer>
     <!-- /////////////////footer section end/////////////// -->
 
+    <!-- Mobile Responsive Social Icons Start -->
+
+    <section class="mobile-social-icons">
+        <div class="mobile-social-container">
+            <div id="mobileToggler" class="mobile-social-toggler">
+                <span>
+                    <i class="fa-solid fa-address-book fa-shake"></i>
+                </span>
+            </div>
+            <div class="mobile-toggler-menus">
+                <div class="mobile-menus-container">
+                    <span style="--i:1;--bac:rgb(0, 81, 255);">
+                        <a href="tel:+917538857567" target="_blank" class="social-links">
+                            <i class="fa-solid fa-phone"></i>
+                        </a>
+                    </span>
+                    <span style="--i:2;--bac:green;">
+                        <a href="https://wa.me/+917538857567" target="_blank" class="social-links">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                    </span>
+                    <span style="--i:3;--bac:rgb(74, 204, 255);">
+                        <a href="#" target="_blank" class="social-links">
+                            <i class="fa-brands fa-skype"></i>
+                        </a>
+                    </span>
+                    <span style="--i:4;--bac:rgb(0, 81, 255);">
+                        <a href="mailto:info@iqtechway.com" target="_blank" class="social-links">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                    </span>
+                </div>
+
+            </div>
+        </div>
+
+        <script>
+            // Mobile Menus Teggler 
+
+            let mobileToggler = document.querySelector('.mobile-social-toggler');
+            let mobileTogglerMenus = document.querySelector('.mobile-toggler-menus');
+
+            mobileToggler.addEventListener('click', () => {
+                mobileTogglerMenus.classList.toggle('mobResponsive');
+                mobileToggler.classList.toggle('ro45');
+            });
+
+
+
+        </script>
+    </section>
+
+    <!-- Mobile Responsive Social Icons End -->
+
 
     <!-- After footer start -->
 
@@ -2080,21 +2145,21 @@
     </script>
 
 
-<!-- begin olark code --><script type="text/javascript" async>
-  ;(function(o,l,a,r,k,y){if(o.olark)return;
-  r="script";y=l.createElement(r);r=l.getElementsByTagName(r)[0];
-  y.async=1;y.src="//"+a;r.parentNode.insertBefore(y,r);
-  y=o.olark=function(){k.s.push(arguments);k.t.push(+new Date)};
-  y.extend=function(i,j){y("extend",i,j)};
-  y.identify=function(i){y("identify",k.i=i)};
-  y.configure=function(i,j){y("configure",i,j);k.c[i]=j};
-  k=y._={s:[],t:[+new Date],c:{},l:a};
-  })(window,document,"static.olark.com/jsclient/loader.js");/* custom configuration goes here (www.olark.com/documentation) */olark.identify('9134-624-10-9995');</script><!-- end olark code -->
+    <!-- begin olark code -->
+    <script type="text/javascript" async>
+        ; (function (o, l, a, r, k, y) {
+            if (o.olark) return;
+            r = "script"; y = l.createElement(r); r = l.getElementsByTagName(r)[0];
+            y.async = 1; y.src = "//" + a; r.parentNode.insertBefore(y, r);
+            y = o.olark = function () { k.s.push(arguments); k.t.push(+new Date) };
+            y.extend = function (i, j) { y("extend", i, j) };
+            y.identify = function (i) { y("identify", k.i = i) };
+            y.configure = function (i, j) { y("configure", i, j); k.c[i] = j };
+            k = y._ = { s: [], t: [+new Date], c: {}, l: a };
+        })(window, document, "static.olark.com/jsclient/loader.js");/* custom configuration goes here (www.olark.com/documentation) */olark.identify('9134-624-10-9995');</script>
+    <!-- end olark code -->
 
 
-
-    <!-- ////////////////////////////JS Elements ////////////////////// -->
-    <script src="assets/JS/script.js"></script>
 
     <!-- ////////////////////////////JS Elements ////////////////////// -->
     <script src="assets/JS/bootstrap.bundle.min.js"></script>
@@ -2110,10 +2175,39 @@
 
     <script src="assets/JS/owl.carousel.min.js"></script>
 
+
+    <!-- ////////////////////////////JS Elements ////////////////////// -->
+    <script src="assets/JS/script.js"></script>
     <!-- swiper  -->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <script>
+        // Mobile Responsive icons 
+
+        $(document).ready(function () {
+            $(".fa-address-book").click(function () {
+
+                if ($(this).hasClass('fa-address-book')) {
+                    // Do something if class exists
+                    $(this).removeClass("fa-address-book");
+                    $(this).addClass("fa-xmark");
+                } else {
+                    // Do something if class does not exist
+                    $(this).removeClass("fa-xmark");
+                    $(this).addClass("fa-address-book");
+                }
+
+                //////////////////////////////////
+
+                // $(".fa-address-book").addClass("fa-xmark");
+                // $(".fa-xmark").removeClass("fa-address-book")
+            })
+
+
+        })
+
+    </script>
 
 
     <!-- Initialize Swiper -->
@@ -2370,68 +2464,68 @@
 
     </script>
 
-    
-<script>
 
-    // NAvbar BG 
+    <script>
 
-    let navbarBg = document.querySelector('.navbar');
-    let navBtn = document.querySelector('.navbar-toggler');
-    let pngWhite = document.querySelector('.png-white');
-    let pngRed = document.querySelector('.png-red');
+        // NAvbar BG 
 
-   
+        let navbarBg = document.querySelector('.navbar');
+        let navBtn = document.querySelector('.navbar-toggler');
+        let pngWhite = document.querySelector('.png-white');
+        let pngRed = document.querySelector('.png-red');
 
 
-    window.addEventListener('scroll', () => {
-
-        if (window.scrollY >= 90) {
-            navbarBg.classList.add('nav-background');
-            pngWhite.classList.toggle('nav-opacity');
-            pngRed.classList.remove('nav-opacity');
-            pngRed.style.opacity = '1';
-            pngRed.style.zindex = '1';
-            pngWhite.style.opacity = '0';
-            pngWhite.style.zindex = '0';
-
-        } else if (window.scrollY < 90) {
-            navbarBg.classList.remove('nav-background');
-            pngRed.classList.toggle('nav-opacity');
-            pngWhite.classList.remove('nav-opacity');
-            pngWhite.style.opacity = '1';
-            pngRed.style.opacity = '0';
-            pngRed.style.zindex = '0';
-            pngWhite.style.zindex = '1';
-
-        } else if(window.scrollY == 0){
-            pngRed.classList.add('nav-opacity');
-            pngRed.style.opacity = '0';
 
 
-        } else if(window.scrollY < 0){
-            pngRed.classList.add('nav-opacity');
-            pngRed.style.opacity = '0';
-        } else{
-            pngRed.classList.add('nav-opacity');
-            pngRed.style.opacity = '0';
-        }
+        window.addEventListener('scroll', () => {
 
-    });
+            if (window.scrollY >= 90) {
+                navbarBg.classList.add('nav-background');
+                pngWhite.classList.toggle('nav-opacity');
+                pngRed.classList.remove('nav-opacity');
+                pngRed.style.opacity = '1';
+                pngRed.style.zindex = '1';
+                pngWhite.style.opacity = '0';
+                pngWhite.style.zindex = '0';
 
-    navBtn.addEventListener('click', () => {
+            } else if (window.scrollY < 90) {
+                navbarBg.classList.remove('nav-background');
+                pngRed.classList.toggle('nav-opacity');
+                pngWhite.classList.remove('nav-opacity');
+                pngWhite.style.opacity = '1';
+                pngRed.style.opacity = '0';
+                pngRed.style.zindex = '0';
+                pngWhite.style.zindex = '1';
 
-        if (navbarBg.classList.add('nav-background')) {
-            navbarBg.classList.remove('nav-background');
-
-        } else {
-            navbarBg.classList.add('nav-background');
-
-        }
-
-    })
+            } else if (window.scrollY == 0) {
+                pngRed.classList.add('nav-opacity');
+                pngRed.style.opacity = '0';
 
 
-</script>
+            } else if (window.scrollY < 0) {
+                pngRed.classList.add('nav-opacity');
+                pngRed.style.opacity = '0';
+            } else {
+                pngRed.classList.add('nav-opacity');
+                pngRed.style.opacity = '0';
+            }
+
+        });
+
+        navBtn.addEventListener('click', () => {
+
+            if (navbarBg.classList.add('nav-background')) {
+                navbarBg.classList.remove('nav-background');
+
+            } else {
+                navbarBg.classList.add('nav-background');
+
+            }
+
+        })
+
+
+    </script>
 
 </body>
 
